# stravakomhunter

./: .env.example  .gitignore  README.md  agents.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
.husky/: commit-msg  pre-commit
src/: config.ts  index.ts  load-local-env.ts  server.ts
src/clients/: intervals-icu-client.ts  strava-client.ts  weather-client.ts
src/domain/: types.ts
src/services/: segment-forecast-service.ts
src/simulation/: forecast.ts
strava_kom_checker/: __init__.py  __main__.py  clients.py  config.py  forecast.py  frontend.py  models.py  server.py  service.py  streamlit_app.py
tests/: config.test.ts  forecast-engine.test.ts  live_test_utils.py  load-local-env.test.ts  server.test.ts  service.test.ts  test_clients.py  test_config.py  test_forecast.py  test_frontend.py  test_intervals_live.py  test_server.py  test_service.py  test_strava_live.py  test_weather_live.py
